# fansly-recorder-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  main.rs  webhooks.rs
src/api/: fansly.rs  mod.rs
src/processing/: recorder.rs
