[package]
name = "fansly-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
vcsr = "0.4.0"
walkdir = "2.5.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
